--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
   implementation "io.vertx:vertx-web:$vertxVersion"
   implementation "io.vertx:vertx-web-client:$vertxVersion"
   
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation fileTree(dir: 'lib', include: ['*.jar'])
   compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
   compile "io.vertx:vertx-jdbc-client:$vertxVersion"
 
